elaborate on enforced password policy details in cert and oid req form. Limit slider error text fix to only the relevant row so that new password policy details don't overflow
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@4565 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/css/jquery.accountform.css
+++ b/mig/images/css/jquery.accountform.css
@@ -281,6 +281,6 @@
 
 /* Additional tuning below */
 /* Make sure accept terms status don't wrap to slider width */
-.valid-feedback, .invalid-feedback, .switch-label {
+.form-group .valid-feedback, .form-group .invalid-feedback, .form-group .switch-label {
     width: 400px;
 }
